@@ -1,5 +1,7 @@
 2016-10-12  Javier Esteban Salazar Loyola  <jsalazarloyola@gmail.com>
 
+	* gui/mainWindow.py (MainApp): Add save function to export to PNG
+	and SVG.
 	* gui/widgets.py: Add ExportDialog class for creating a custom
 	save file dialog.
 
